konga-home-page

--- a/index.html
+++ b/index.html
@@ -822,7 +822,7 @@
               Deals
             </a>
            </div>
-           <div>
+           <div class="mobil-last-link">
             <a href="#">
               <i class="fa fa-shopping-cart"></i>
               Carts
